
Sunday April 3rd, 2016
======================

    ...
    

Saturday April 2nd, 2016
========================

    Make sure to actually test the serialize_bytes and serialize_string

    It's actually really annoying to have to use serialize methods when you are splitting read/write, eg. for sets of objects.

    Maybe split out and have:

        int value = read_bits( stream, 32 );

        write_bits( stream, EOF, 32 );

    etc...

    I think this is the best.

    Best of both world!

    Sketched out methods.

    Moved compressed float into 002 example. Not part of core library.


    It seems I should be able to get read int to work in-place nicely like this:

        uint32_t value = read_bits( stream, 32 );

    The problem is that I'm going to need to implement error checking in an exception like way, and I can't return false to indicate error.

    So... can this actually be done the way I want it to be done? I don't think it actually can be done.

    Frankly, this really sucks. If I can't solve this, move on.

    Found a better idiom:

        int value; serialize_bits( stream, value, 32 );

    Redefine the read/write functions to not work off Stream::IsReading etc.

    Seems to be good.

    Now rework the packet read/write functions to not be sucky with typedef Stream

    And cleanup the definition of the serialize function.


Saturday March 26th, 2016
=========================

    Need to sort out the endian issues and make sure my bitpacker lines up with what I described in my article.

    I may have fucked it up actually!

    Yes. It was reversed, eg. rolling bits the wrong way, required big endian to function.

    Reworked it to match the description in the article.

    Just need to finish updating ReadBytes/WriteBytes and the source code is available.

    Done. But it's not unit tested.

    Added unit test for serialize_bytes


Sunday January 17th, 2016
=========================

    Work out what the example should look like.
