@@ -2,7 +2,14 @@
 Sunday April 3rd, 2016
 ======================
 
-    ...
+
+    Now actually need to hook up the example serialization code in 002 and make it as clean as possible.
+
+    I think I'm going to skip the +/- integer trick, or put it before the object array stuff in the article?
+
+    Sorted out randomized object data.
+
+    Ready to finish writing article.
     
 
 Saturday April 2nd, 2016
